# check-stock

./: .env.example  CLAUD.md  README.md  app.py  config.py  create-uuid.py  decorators.py  pyproject.toml
models/: log.py  supply.py  user.py
routes/: admin.py  auth.py  dashboard.py  labels.py  scanner.py
static/js/: scanner.js  suggestions.js
templates/: base.html
templates/admin/: dashboard.html
templates/auth/: login.html  register.html  reset_password.html
templates/dashboard/: index.html
templates/inventory/: list.html
templates/scanner/: scan.html
utils/: barcode_gen.py  uploads.py
